Fix calculation of the bubble view height.

BUG=678558
TEST=Notification doesn't overlap with Uber Tray when ChromeVox is
     enabled.

Review-Url: https://codereview.chromium.org/2625663002
Cr-Commit-Position: refs/heads/master@{#442756}

Former-commit-id: e2867aed46b3f00f3735d310144d6ef638f8be1a